<resources>
    <string name="app_name">Task Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_tasks">Список</string>
    <string name="menu_calendar">Календарь</string>
    <string name="menu_archive">Архив</string>
    <string name="add_task_title">Add Task</string>
    <string name="new_task_hint">Новая задача</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_task_prompt">Delete?</string>
    <string name="deadline_not_set">Дедлайн: не задан</string>
    <string name="deadline_prefix">Дедлайн: %1$s</string>
    <string name="select_deadline">Выбрать</string>
    <string name="clear_deadline">Сбросить дедлайн</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="save">Save</string>
    <string name="no_deadline_label">Без дедлайна</string>
    <string name="deadline_label">Дедлайн: %1$s</string>
    <string name="expand_collapse">Развернуть/Свернуть</string>
    <string name="add_subtask">Подзадача</string>
    <string name="subtask_title_hint">Название подзадачи</string>
    <string name="delete_subtask_prompt">Удалить подзадачу?</string>
    <string name="task_detail_title">Задача</string>
    <string name="description_hint">Описание</string>
    <string name="select_deadline_title">Выбрать дедлайн</string>
    <string name="reset_deadline">Сбросить</string>
    <string name="save_task">Сохранить</string>
    <string name="add_subtask_title">Добавить подзадачу</string>
    <string name="empty_tasks_title">Нет задач</string>
    <string name="empty_tasks_subtitle">Создайте первую задачу, чтобы начать планировать день</string>
    <string name="created_at_label">Создано: %1$s</string>
    <string name="add_task_cta">Добавить</string>
    <string name="subtasks_header">Подзадачи</string>
    <string name="calendar_week_title">Неделя: %1$s–%2$s</string>
    <string name="calendar_day_title">День: %1$s</string>
    <string name="calendar_today">Сегодня</string>
    <string name="calendar_prev">Предыдущая</string>
    <string name="calendar_next">Следующая</string>
    <string name="calendar_week_mode">Неделя</string>
    <string name="calendar_day_mode">День</string>
    <string name="calendar_no_tasks">Нет задач в выбранном диапазоне</string>
    <string name="calendar_empty_day">Нет задач</string>
    <string name="archive_filter_done_only">Только выполненные</string>
    <string name="archive_filter_all">Всё прошлое</string>
    <string name="archive_empty">В архиве пока нет задач</string>
    <string name="archive_title">Архив</string>
    <string name="calendar_title">Календарь</string>
    <string name="task_deleted">Задача удалена</string>
    <string name="undo">Отменить</string>
    <string name="task_marked_done">Отмечено выполненным</string>
    <string name="task_returned">Возвращено</string>
    <string name="mark_done">Выполнить</string>
    <string name="snooze_one_hour">Отложить на 1 час</string>
    <string name="snooze_tomorrow">Отложить на завтра (9:00)</string>
    <string name="choose_quick_action">Быстрое действие</string>
    <string name="task_snoozed_hour">Задача отложена на час</string>
    <string name="task_snoozed_tomorrow">Задача перенесена на завтра</string>
    <string name="task_pinned">Закреплено</string>
    <string name="task_unpinned">Откреплено</string>
    <string name="menu_groups">Группы…</string>
    <string name="group_selector_hint">Группа</string>
    <string name="group_inbox">Все</string>
    <string name="group_ungrouped">Без группы</string>
    <string name="group_deadlines">С дедлайном</string>
    <string name="groups_title">Группы</string>
    <string name="add_group">Добавить группу</string>
    <string name="group_name_hint">Название группы</string>
    <string name="rename_group">Переименовать группу</string>
    <string name="delete_group_prompt">Удалить группу? Задачи перейдут во \"Все\".</string>
    <string name="groups_empty">Группы не созданы</string>
    <string name="search_hint">Поиск (текст и #теги)</string>
    <string name="empty_search_title">Ничего не найдено</string>
    <string name="empty_search_subtitle">Попробуйте изменить запрос</string>
    <string name="tags_header">Теги</string>
    <string name="edit_tags">Изменить</string>
    <string name="add_tag">Добавить</string>
    <string name="new_tag_hint">Новый тег</string>
    <string name="menu_tags">Теги…</string>
    <string name="tags_filter_title">Фильтр по тегам</string>
    <string name="no_tags">Нет тегов</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Отмена</string>
</resources>